header not fixed on ie9 because headroom not supported in this browser

--- a/assets/sass/partials/_headroom.scss
+++ b/assets/sass/partials/_headroom.scss
@@ -31,3 +31,15 @@ main {
     margin-top: 0;
   }
 }
+
+html.lt-ie10 {
+
+  headroom {
+    position:relative;
+  }
+
+  main {
+    margin-top:0;
+  }
+
+}
